<resources>
    <string name="not_pass">Забыли пароль?</string>
    <string name="app_name">Интеренет магазин</string>
    <string name="autorize">Вход</string>
    <string name="autentification">Регистрация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="showPassword">Показать пароль</string>
    <string name="socTvText">Войти через соц. сеть</string>
    <string name="facebook">Facebook</string>


    <string name="title_main_menu_search">Поиск</string>
    <string name="title_main_menu_basket">Корзина</string>

    <string name="title_login">Вход</string>
    <string name="title_registration">Регистрация</string>
    <string name="title_tovars">Каталог товаров</string>
    <string name="title_filtr">Категория</string>
    <string name="title_tovar">Товар</string>

    <string name="nv_catalog">Каталог товаров</string>
    <string name="nv_bask">Корзина</string>
    <string name="nv_myLike">Избранное</string>
    <string name="nv_mySell">Мои заказы</string>
    <string name="nv_info">Информация</string>
    <string name="nv_languages">Языки</string>

    <string name="logo_info">logo</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="tov_catalog">Каталог товаров</string>
    <string name="img_tov">Изображение товара</string>

    <string name="btn_filtr_text">ФИЛЬТР</string>
    <string name="btn_sort_text">СОРТИРОВКА</string>
</resources>
