<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayLight"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorGray_"
                app:titleTextColor="@color/colorDarkGray_">
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="120dp">
                <EditText
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/login"
                    style="@style/editTextAutorizationStyle"
                    android:backgroundTint="@color/colorGray_"
                />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    style="@style/editTextAutorizationStyle"
                    android:backgroundTint="@color/colorGray_"
                />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/showPassContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp">

                <CheckBox
                    android:id="@+id/visiblePassword"
                    style="@style/myCbxAutorize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:gravity="center"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark"
                    android:buttonTint="@color/colorDarkGray_"
                    android:text="@string/showPassword" />

                <TextView
                    android:id="@+id/tvDontPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_gravity="center"
                    android:text="@string/not_pass"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack_"
                    android:layout_weight="1"
                />
            </LinearLayout>

            <Button
                android:id="@+id/btnOpen"
                style="@style/myBtnAutorize"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/autorize"
                />
            <TextView
                android:id="@+id/tvSocListInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/socTvText"
                android:textStyle="bold"
                android:textColor="@color/colorDarkGray_"/>
            <Button
                android:id="@+id/btnFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textAlignment="center"
                android:text="@string/facebook"
                android:background="@color/colorBlu_"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:gravity="center"
                android:layout_gravity="center"/>

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigationViewMain"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu_navigation"
        app:headerLayout="@layout/header_nv_layout"/>
</android.support.v4.widget.DrawerLayout>