<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/nv_container_header"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="192dp"
    android:orientation="vertical"
    android:background="@color/colorGray_">
    <ImageView
        android:id="@+id/ivLogo_nv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/logo_ico_nv"
        android:contentDescription="@string/logo_info" />
    <LinearLayout
        android:id="@+id/linkContainer_nv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="0dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/autorize"
                android:textColor="@color/colorDarkGray_"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/nv_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorDarkGray_"
                android:clickable="true"
                android:focusable="true"
                android:textSize="20sp"
                android:layout_weight="1"
                android:text="@string/autentification"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorDarkGray_"/>

    </LinearLayout>

</LinearLayout>